<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just code it!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_signup_page">Complete your data</string>
    <string name="labelName">Name</string>
    <string name="labelEmail">Email</string>
    <string name="labelPassword">Password</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="empty_stories">There are no Stories</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="detail_story">Detail Story</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_for_logout">Are you sure you want leave?</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_name">Name must be more than 3 letters</string>
    <string name="invalid_email">The email format you entered is incorrect</string>
    <string name="invalid_password">Password must be more than 8 letters</string>
    <string name="invalid_empty_image">Image can not be empty</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">map</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
</resources>